--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,6 +2,9 @@
   margin: auto;
 }
 
+html{
+  height: 100%;
+}
 
 body {
   margin: 0;
@@ -10,6 +13,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  min-height: 100%;
 }
 
 code {
