--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,17 +1,9 @@
-@keyframes Gradient {
-  0% {
-  background-position: 0% 50%
-  }
-50% {
-background-position: 100% 50%
-}
-100% {
-background-position: 0% 50%
-}
-}
-
 body {
-  background: linear-gradient(-45deg, #ee765281, #e73c7e7b, #23a5d582, #23d5ab85), url('../public/img/pixel_art_bg.jpg');
-  background-size: 400% 400%;
-  animation: Gradient 15s ease infinite;
+  background: linear-gradient(rgba(9, 27, 70, 0.7), rgba(33, 37, 41, 0.7)), url('../public/img/cave.gif') no-repeat center center fixed;
+
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  color: white;
 }
