--- a/client/src/css/layout.css
+++ b/client/src/css/layout.css
@@ -1,8 +1,14 @@
+
 .default-container{
+  padding: 1em;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
+
+
+
 
 
 
