--- a/client/src/games/flappyBird/flappyBird.css
+++ b/client/src/games/flappyBird/flappyBird.css
@@ -3,6 +3,8 @@
   
   width: 900px;
   height: 600px;
-  background: lightblue;
-  border: 2px solid black;
+  background: url('../../../public/img/pixel_art_bg.jpg');
+  background-size: cover;
+  border: 2px solid white;
 }
+
